--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,10 @@ pre a:hover {
     margin-bottom: -2px;
 }
 
+body>pre {
+    margin-left: 20px;
+}
+
 @media only screen and (min-width: 900px) {
     body>pre {
         margin-left: 100px;
